Revert "Fakülte ve Bölüm ekleme"
This reverts commit f469ce0c37e0c2926cae633781390c3c1c4d6fcc.

--- a/FacultyInformationSystem/FacultyInformationSystem/FacultyInformationSystem.csproj
+++ b/FacultyInformationSystem/FacultyInformationSystem/FacultyInformationSystem.csproj
@@ -79,7 +79,7 @@
     </Compile>
     <Compile Include="Graduate.cs" />
     <Compile Include="Lecturer.cs" />
-    <Compile Include="Course.cs" />
+    <Compile Include="Lessons.cs" />
     <Compile Include="PhD.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -117,8 +117,6 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Properties\DataSources\Department.datasource" />
-    <None Include="Properties\DataSources\Faculty.datasource" />
     <None Include="Properties\lavender.png" />
   </ItemGroup>
   <ItemGroup>
