--- a/FacultyInformationSystem/FacultyInformationSystem/FacultyInformationSystem.csproj
+++ b/FacultyInformationSystem/FacultyInformationSystem/FacultyInformationSystem.csproj
@@ -45,14 +45,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form\AddStudent.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form\AddStudent.Designer.cs">
-      <DependentUpon>AddStudent.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Department.cs" />
-    <Compile Include="Faculty.cs" />
     <Compile Include="Form\DepartmentForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -77,10 +69,6 @@
     <Compile Include="Form\LessonsForm.Designer.cs">
       <DependentUpon>LessonsForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Graduate.cs" />
-    <Compile Include="Lecturer.cs" />
-    <Compile Include="Lessons.cs" />
-    <Compile Include="PhD.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -88,17 +76,29 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Student.cs" />
-    <Compile Include="Undergraduate.cs" />
-    <Compile Include="University.cs" />
+    <Compile Include="Form\Students.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form\Students.Designer.cs">
+      <DependentUpon>Students.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form\UI.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form\UI.Designer.cs">
+      <DependentUpon>UI.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form\UniversityForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form\UniversityForm.Designer.cs">
+      <DependentUpon>UniversityForm.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Form\AddStudent.resx">
-      <DependentUpon>AddStudent.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Form\DepartmentForm.resx">
       <DependentUpon>DepartmentForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -114,6 +114,15 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\Students.resx">
+      <DependentUpon>Students.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\UI.resx">
+      <DependentUpon>UI.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\UniversityForm.resx">
+      <DependentUpon>UniversityForm.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
